@@ -5,6 +5,7 @@ import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.image.BufferedImage;
+import java.text.DecimalFormat;
 
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction0;
 import edu.colorado.phet.common.piccolophet.nodes.ButtonNode;
@@ -19,10 +20,13 @@ import edu.umd.cs.piccolo.nodes.PText;
 public class StudentComponent extends PNode {
     public final StudentID studentID;
     private final PImage thumbnail;
+    private PText text;
+    private PText text2;
 
     public StudentComponent( final StudentID studentID, final VoidFunction0 watch ) {
         this.studentID = studentID;
-        addChild( new PText( studentID.getName() ) );
+        final PText namePText = new PText( studentID.getName() );
+        addChild( namePText );
         final ButtonNode buttonNode = new ButtonNode( "Watch" ) {{
             setOffset( 100, 0 );
             addActionListener( new ActionListener() {
@@ -44,13 +48,32 @@ public class StudentComponent extends PNode {
             setOffset( buttonNode.getFullBounds().getMaxX() + 10, 0 );
         }};
         addChild( thumbnail );
+        text = new PText( "-" );
+        text.setOffset( 0, 50 );
+
+        text2 = new PText( "-" );
+        text2.setOffset( 0, 100 );
+        addChild( text );
+        addChild( text2 );
     }
 
     public void setThumbnail( BufferedImage thumbnail ) {
         this.thumbnail.setImage( thumbnail );
     }
 
+    public void setUpTime( long upTime ) {
+        text.setText( "uptime = " + toSeconds( upTime ) + " sec" );
+    }
+
+    private String toSeconds( long upTime ) {
+        return new DecimalFormat( "0.0" ).format( upTime / 1000.0 );
+    }
+
     public StudentID getStudentID() {
         return studentID;
+    }
+
+    public void setTimeSinceLastEvent( long timeSinceLastEvent ) {
+        text2.setText( "last event " + toSeconds( timeSinceLastEvent ) + " sec ago" );
     }
 }
