@@ -4,30 +4,33 @@ package edu.colorado.phet.simsharing.teacher;
 import java.io.Serializable;
 import java.util.ArrayList;
 
-import edu.colorado.phet.gravityandorbits.simsharing.SerializableBufferedImage;
-import edu.colorado.phet.simsharing.Pair;
 import edu.colorado.phet.simsharing.StudentID;
+import edu.colorado.phet.simsharing.StudentSummary;
 
 /**
  * @author Sam Reid
  */
 public class StudentList implements Serializable {
-    private final ArrayList<Pair<StudentID, SerializableBufferedImage>> studentIDs;
+    private final ArrayList<StudentSummary> students;
 
-    public StudentList( ArrayList<Pair<StudentID, SerializableBufferedImage>> studentIDs ) {
-        this.studentIDs = studentIDs;
-    }
-
-    public ArrayList<Pair<StudentID, SerializableBufferedImage>> getStudentIDs() {
-        return studentIDs;
+    public StudentList( ArrayList<StudentSummary> students ) {
+        this.students = students;
     }
 
     public boolean containsStudent( StudentID studentID ) {
-        for ( Pair<StudentID, SerializableBufferedImage> id : studentIDs ) {
-            if ( id._1.equals( studentID ) ) {
+        for ( StudentSummary student : students ) {
+            if ( student.getStudentID().equals( studentID ) ) {
                 return true;
             }
         }
         return false;
+    }
+
+    public int size() {
+        return students.size();
+    }
+
+    public StudentSummary get( int i ) {
+        return students.get( i );
     }
 }
