@@ -56,9 +56,9 @@ public class StudentWatcher {
                 e.printStackTrace();
             }
 
-            final Pair<Object, StudentMetadata> pair = (Pair<Object, StudentMetadata>) server.sendRequestReply( new TeacherDataRequest( studentID, controlFrame.live.getValue() ? Time.LIVE : new Time.Index( controlFrame.frameToDisplay.getValue() ) ) );
+            final Pair<Sample, StudentMetadata> pair = (Pair<Sample, StudentMetadata>) server.sendRequestReply( new TeacherDataRequest( studentID, controlFrame.live.getValue() ? Time.LIVE : new Time.Index( controlFrame.frameToDisplay.getValue() ) ) );
             if ( pair != null ) {
-                final GravityAndOrbitsApplicationState state = (GravityAndOrbitsApplicationState) pair._1;
+                final GravityAndOrbitsApplicationState state = (GravityAndOrbitsApplicationState) pair._1.getData();
                 if ( state != null ) {
                     try {
                         SwingUtilities.invokeAndWait( new Runnable() {
