@@ -1,3 +1,4 @@
+Added readout for uptime and time since last message
 # 00.00.12 (49708) Mar 11, 2011
 Improved student exit sequence
 Updated to akka-1.0
